examples/test/testpolicy8855.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8855
  namespace: namespace390
spec:
  podSelector:
    matchLabels:
      key7: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value6
          key31: value35
          key15: value24
      podSelector:
        matchLabels:
          key40: value35
